OS2UOL-761: Removed sticky positioning of <thead> in all forms to prevent overlap of first row in <tbody>

--- a/webroot/modules/custom/os2uol_entity_forms/css/custom-form-alter.css
+++ b/webroot/modules/custom/os2uol_entity_forms/css/custom-form-alter.css
@@ -7,3 +7,8 @@
 .node-form  input.submit-trash {
   left: auto;
 }
+
+.position-sticky thead {
+  position: relative !important;
+  top: auto !important;
+}
